kubernetes/base/crunchy-postgres-pgadmin/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  annotations:
    gethomepage.dev/description: Postgres Database Manager
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Management
    gethomepage.dev/icon: si-postgresql
    gethomepage.dev/name: pgAdmin
spec:
  hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: "${APP}"
          port: 5050
